--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
   - cd ${TRAVIS_BUILD_DIR}
 
 script:
-  - nosetests -a --verbose --with-coverage --cover-package=teller --cover-erase
+  - nosetests --verbose --with-coverage --cover-package=teller --cover-erase
 
 after_success:
   # publish coverage report
