--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ after_success:
   - source deactivate
   - coveralls
   # Tell read the docs to rebuild docs
-  - curl -X POST http://readthedocs.org/build/teller
+  - curl -X POST http://readthedocs.org/build/hindemith
 
 notifications:
   slack: ucb-sejits:cPZxBunxagWZ763mcsIXOV0W
