Dynamic fused function name generation, fixing coverage reporting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
   - cd ${TRAVIS_BUILD_DIR}
 
 script:
-  - nosetests --verbose --with-coverage --cover-package=teller --cover-erase
+  - nosetests --verbose --with-coverage --cover-package=hindemith --cover-erase
 
 after_success:
   # publish coverage report
