--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-stencil_code
+hindemith
 numpy>=1.8.1
 -e git://github.com/ucb-sejits/ctree.git#egg=ctree
 -e git://github.com/ucb-sejits/pycl.git#egg=pycl
