--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 
 python:
   - "2.7"
-  # - "3.3"
-  # - "3.4"
+  - "3.3"
+  - "3.4"
 
 before_install:
 
@@ -13,13 +13,13 @@ before_install:
   - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then export PATH=/home/travis/miniconda/bin:$PATH; else export PATH=/home/travis/miniconda3/bin:$PATH; fi
   - conda update --yes conda
   # Setup environment
-  - conda create -n travisci --yes python=${TRAVIS_PYTHON_VERSION:0:3} llvm numpy setuptools nose pygments Sphinx coverage
+  - conda create -n travisci --yes python=${TRAVIS_PYTHON_VERSION:0:3} llvm numpy pip
   - source activate travisci
   - sudo apt-get update -qq
   - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
 
 install:
-  - pip install numpy Sphinx coveralls coverage nose pygments
+  - pip install numpy Sphinx coveralls coverage nose pygments setuptools 
 
 
   - mkdir dependencies
