Install coveralls for reporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,10 @@ deploy:
     tags: true
     all_branches: true
 after_success:
+  # install setuptools for deploy
+  - pip instal setuptools coveralls
   - source deactivate
   - coveralls
   - curl -X POST http://readthedocs.org/build/hindemith
-  # install setuptools for deploy
-  - pip instal setuptools 
 notifications:
   slack: ucb-sejits:cPZxBunxagWZ763mcsIXOV0W
