--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-hindemith
-numpy>=1.8.1
-ctree>=0.95a
-pycl>=0.1.1
+-e git://github.com/ucb-sejits/ctree.git@tuning#egg=ctree
+-e git://github.com/leonardt/llvmlite.git#egg=llvmlite
+-e git://github.com/ucb-sejits/hindemith.git#egg=hindemith
+pycl
+scipy
+enum34
