--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,13 @@ python:
   - '3.3'
   - '3.4'
 before_install:
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-3.5.2-Linux-x86_64.sh
-    -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-3.5.2-Linux-x86_64.sh
-    -O miniconda.sh; fi
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then export PATH=/home/travis/miniconda/bin:$PATH;
-    else export PATH=/home/travis/miniconda3/bin:$PATH; fi
-  - conda update --yes conda
-  - conda create -n travisci --yes python=${TRAVIS_PYTHON_VERSION:0:3} llvm numpy pip scipy
-  - source activate travisci
   - sudo apt-get update -qq
   - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
 install:
-  - pip install numpy Sphinx coveralls coverage nose pygments setuptools
-  - mkdir dependencies
-  - git clone -b llvm-3.4 git://github.com/llvmpy/llvmpy.git ${TRAVIS_BUILD_DIR}/dependencies/llvmpy
-  - cd ${TRAVIS_BUILD_DIR}/dependencies/llvmpy
-  - python setup.py install
-  - cd ${TRAVIS_BUILD_DIR}
-  - pip install -e git://github.com/ucb-sejits/pycl.git#egg=pycl
-  - pip install -e git://github.com/ucb-sejits/ctree.git#egg=ctree
+  - export PYTHON_VERSION=$(python -c 'import sys; print(sys.version_info[0:2])')
+  - pip install -r requirements.txt
+  - if [ $PY_MAJOR_MINOR \< "3.0" ]; then pip install opentuner; fi
+  - pip install -r requirements.txt
   - pip install -e git://github.com/ucb-sejits/stencil_code.git#egg=stencil_code
 script:
   - nosetests --verbose --with-coverage --cover-package=hindemith --cover-erase
