--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,10 @@ python:
   - '3.4'
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers python-scipy
+  - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
 install:
   - export PYTHON_VERSION=$(python -c 'import sys; print(sys.version_info[0:2])')
   - pip install -r requirements.txt
-  - if [ $PY_MAJOR_MINOR \< "3.0" ]; then pip install opentuner; fi
-  - pip install -r requirements.txt
-  - pip install -e git://github.com/ucb-sejits/stencil_code.git#egg=stencil_code
 script:
   - nosetests --verbose --with-coverage --cover-package=hindemith --cover-erase
 deploy:
