--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,19 @@ python:
   - '2.7'
   - '3.3'
   - '3.4'
+env: LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/64
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
+  - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers cmake
 install:
   - export PYTHON_VERSION=$(python -c 'import sys; print(sys.version_info[0:2])')
   - pip install -r requirements.txt
+  - git clone https://github.com/arrayfire/clBLAS
+  - cd clBLAS
+  - mkdir build
+  - cd build
+  - cmake ../src -DCMAKE_BUILD_TYPE=Release -DBUILD_KTEST=OFF
+  - make && sudo make install
 script:
   - nosetests --verbose --with-coverage --cover-package=hindemith --cover-erase
 deploy:
