--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - cd build
   - cmake ../src -DCMAKE_BUILD_TYPE=Release -DBUILD_KTEST=OFF
   - make && sudo make install
-  - cd {TRAVIS_BUILD_DIR}
+  - cd $TRAVIS_BUILD_DIR
 script:
   - nosetests --verbose --with-coverage --cover-package=hindemith --cover-erase
 deploy:
