--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 install:
   - export PYTHON_VERSION=$(python -c 'import sys; print(sys.version_info[0:2])')
   - pip install -r requirements.txt
+  - pip install coveralls coverage
   - git clone https://github.com/arrayfire/clBLAS
   - cd clBLAS
   - mkdir build
