Set CC for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 script:
   - nosetests --verbose --with-coverage --cover-package=hindemith
   - mv .coverage .coverage.1
-  - HM_BACKEND=omp nosetests --verbose --with-coverage --cover-package=hindemith
+  - CC=gcc HM_BACKEND=omp nosetests --verbose --with-coverage --cover-package=hindemith
   - mv .coverage .coverage.2
   - coverage combine
 deploy:
